--- a/virus/style.css
+++ b/virus/style.css
@@ -12,3 +12,13 @@ body {
 .navbar-brand {
     padding-left: 10%;
 }
+
+.card {
+    margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 575px) {
+    .toggle_luogo {
+        margin-top: 20px;
+    }
+}
